# hvostiki-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
tracker/: admin.py  backends.py  models.py  schemas.py  serializers.py  tasks.py  urls.py  utils.py  views.py
tracker/management/commands/: fill_breeds.py
tracker/migrations/: 0001_initial.py  0002_remove_user_tracker_use_phone_n_826f19_idx_and_more.py  0003_pet.py  0004_remove_pet_age_pet_birthday.py  0005_alter_pet_color.py  0006_pet_gender_pet_has_castration.py  0007_alter_pet_image.py  0008_breed.py  0009_alter_pet_breed.py  0010_recurrencerule_event.py  0011_eventnotificationlog.py  0012_event_timezone_offset.py  0013_event_done_event_type_eventcompletion.py  0014_alter_event_time_alter_pet_weight.py  0015_alter_eventnotificationlog_unique_together_and_more.py  0016_fcmdevice.py
tracker/services/: firebase_service.py  ucalles_service.py
tracker/tests/: conftest.py  test_auth.py  test_events.py  test_notifications.py  test_pets.py
